Challenge_283-Book_Card/css/styles.css
/* Reset Styles */

*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
  padding: 0;
}
body {
  -webkit-font-smoothing: antialiased;
}

picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
input,
button,
textarea,
select {
  font: inherit;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* Challenge Styles */

:root {
  --body-font: "Roboto", sans-serif;
  --heading-font: "Anek Telugu", sans-serif;
}

/* Nav Styling */

nav {
  display: flex;
  gap: 0.5rem;
}

nav .share,
nav .close {
  display: inline-block;
  width: 1rem;
  height: 1rem;
}

nav .share {
  background: url("../images/shareblack.png") no-repeat;
}

nav .share:hover {
  background: url("../images/sharecolor.png") no-repeat;
}

nav .close {
  background: url("../images/closeblack.png") no-repeat;
}

nav .close:hover {
  background: url("../images/closewhite.png") no-repeat;
}

/* Main Styling */

body {
  display: flex;
  height: 100vh;
  justify-content: center;
  align-items: center;
  position: relative;
  color: rgb(255, 255, 255);
  background-color: #000000;
}

body::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: url("../images/marsbackground.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  filter: blur(3px) brightness(0);
  -webkit-filter: blur(3px) brightness(0.4);
  transition: filter 1s;
  z-index: -1;
}

body.fade-out::before {
  filter: blur(0) brightness(1);
  -webkit-filter: blur(0) brightness(1);
}

/* Card Styling */

.top {
  min-height: 350px;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  background-color: rgba(255, 255, 255, 0.15);
  width: 90%;
  max-width: 675px;
  padding: 1rem;
  box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.4);
  transition: opacity 1s;
}

/* Fade effects */

.card.fade-out,
body::before.fade-out {
  transition: opacity 1s, filter 1s;
}

.card.fade-out {
  opacity: 0;
}

body.fade-out::before {
  filter: blur(0) brightness(1);
  -webkit-filter: blur(0) brightness(1);
}

.wrapper {
  padding: 2rem 2rem 1rem 2rem;
}

.top {
  display: flex;
  min-height: 350px;
  gap: 1rem;
}

.cover-rating {
  display: flex;
  flex-direction: column;
  max-width: 35%;
}

.title-preview {
  display: flex;
  flex-direction: column;
  max-width: auto;
}

.title-preview > h2 {
  font-family: var(--heading-font);
  color: rgb(255, 197, 33);
  font-weight: 800;
  font-size: 3rem;
  letter-spacing: 2px;
  line-height: 1;
}

.title-preview > p.author {
  font-family: var(--body-font);
  color: rgb(255, 255, 255);
  font-weight: 100;
  margin-block-end: 0.5rem;
}

.title-preview > p.author > span {
  font-family: var(--body-font);
  color: rgb(255, 255, 255);
  font-weight: 700;
}

.title-preview > p.snippet,
.title-preview > .read-more > p.snippet {
  font-family: var(--body-font);
  font-weight: 200;
  font-size: 0.8rem;
  margin-block-end: 1rem;
}

.title-preview .read-more {
  transition: height 0.5s ease;
  overflow: hidden;
  height: 0;
  margin-block-end: 1rem;
}

.content-wrapper {
  width: 100%;
}

/* Styling for Button */

button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.3rem 1.8rem;
  border-radius: 100vh;
  background-color: rgba(0, 0, 0, 0.4);
  border: solid 2px rgb(255, 197, 33);
  color: rgb(255, 197, 33);
  transition: background-color 0.5s ease, color 0.5s ease;
}

button:hover {
  background-color: rgb(255, 197, 33);
  border: solid 2px #000000;
  color: #000000;
}

.morebutton {
  width: 150px;
  text-align: center;
}

.morebutton > img {
  height: 1rem;
  width: 1rem;
}

/* Styling for Rating */

.rating {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
}

.rating > input {
  display: none;
}

.rating > label {
  position: relative;
  width: 1.1em;
  font-size: 1.5rem;
  color: #fffc4f;
  cursor: pointer;
}

.rating > label::before {
  content: "\2605";
  position: absolute;
  opacity: 0;
}

.rating > label:hover:before,
.rating > label:hover ~ label:before {
  opacity: 1;
}

.rating > input:checked ~ label:before {
  opacity: 1;
}

.rating:hover > input:checked ~ label:before {
  opacity: 0.6;
}

/* Styling for Book Details Table */

table.bookDetails {
  width: 100%;
  border-collapse: collapse;
  margin-block-start: 2.5rem;
  font-family: var(--body-font);
  font-size: 0.9rem;
}

table.bookDetails td {
  vertical-align: top;
}

table.bookDetails tr:not(:last-child) td {
  border-bottom: solid 2px rgba(255, 255, 255, 0.4);
}

td:nth-child(1) {
  width: 200px;
  color: rgb(255, 197, 33);
  border-inline-end: solid 2px rgba(255, 255, 255, 0.4);
  font-weight: 500;
  text-align: end;
  padding: 0.2rem 1rem 0.2rem 0rem;
}

td:nth-child(2) {
  padding: 0.2rem 0rem 0.2rem 1rem;
  font-weight: 200;
}

/* Share Modal Styling */

.share-modal {
  display: none;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 1000;
  opacity: 0;
  transition: opacity 0.5s;
}

.share-modal.show {
  opacity: 1;
}

.share-modal-content {
  position: relative;
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 420px;
  font-family: var(--body-font);
  text-align: center;
  transform: scale(0);
  transition: transform 0.5s;
}

.share-modal-content h3 {
  color: rgb(0, 0, 0);
  font-family: var(--heading-font);
  margin-block-end: 0.5rem;
}

.share-link-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

#shareLink {
  width: 70%;
  padding: 5px;
  border: 1px solid #ccc;
}

#copyButton {
  width: 28%;
  padding: 5px 10px;
  cursor: pointer;
  background-color: #f0f0f0;
  border: 1px solid #ccc;
}

.share-modal-content .socialmediaList {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.share-modal-content .socialmediaList a img:hover {
  animation: wiggle 0.5s ease-in-out;
}

.share-modal.show .share-modal-content {
  transform: scale(1);
}

.close-modal {
  position: absolute;
  top: 10px;
  right: 10px;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  background: url("../images/closeblack.png") no-repeat;
  cursor: pointer;
}

.close-modal:hover {
  background: url("../images/closewhite.png") no-repeat;
}

/* Social Icon Wiggle for Modal */

@keyframes wiggle {
  0%,
  50% {
    transform: rotate(0);
  }
  12.5%,
  62.5% {
    transform: rotate(-5deg);
  }
  25%,
  75% {
    transform: rotate(0);
  }
  37.5%,
  87.5% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(0);
  }
}

